feat(playwright): add Playwright configuration and update dependencies

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,11 +17,12 @@
     "sonner": "^2.0.2"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@playwright/test": "^1.51.1",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4"
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
